# hr-employee-self-service-portal

./: .replit  README.md  README_PYTHON_BACKEND.md  SWITCH_TO_PYTHON.md  package-lock.json  package.json  pyproject.toml  replit.md  start_dev.sh  start_python_server.sh  tailwind.config.ts
.local/state/replit/agent/filesystem/: filesystem_state.json
client/src/: App.tsx  index.css
client/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
client/src/pages/: AIAssistant.tsx  ApplyLeave.tsx  AttendanceSummary.tsx  Dashboard.tsx  Documents.tsx  Landing.tsx  LeaveCorrection.tsx  LeaveSummary.tsx  RegularizeAttendance.tsx  SalarySlips.tsx
python_server/: .env.example  .gitignore  README.md  SETUP_GUIDE.md  auth.py  config.py  database.py  init_db.py  main.py  models.py  object_storage.py  openai_service.py  requirements.txt  routes.py  run.sh  storage.py
server/: index.ts  openai.ts  routes.ts  storage.ts
shared/: schema.ts
