[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "authlib>=1.6.5",
    "fastapi>=0.118.0",
    "google-cloud-storage>=3.4.0",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "openai>=2.1.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
